Re-add sanctum auth controller
